see #josm11257 - Drop dependency on Apache Commons Codec
git-svn-id: https://josm.openstreetmap.de/osmsvn/applications/editors/josm/plugins@31061 b9d5c4c9-76e1-0310-9c85-f3177eceb1e4